# beancount-n26

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  Taskfile.yml  mise.toml  pyproject.toml
.github/workflows/: main.yml  test.yml
beancount_n26/: __init__.py  cli.py
beancount_n26/utils/: patterns_generation.py
beancount_n26_with_regexes/: __init__.py
tests/: test_n26_importer.py
