[tool.poetry]
name = "beancount-n26"
version = "1.1.0"
description = "Beancount Importer for N26 CSV exports"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/siddhantgoel/beancount-n26"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.poetry.dependencies]
python = "^3.8.1"
beancount = "^3.0.0"
beangulp = "^0.1.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"

[tool.poetry.scripts]
beancount-n26-ec = "beancount_n26.cli:ec"

[tool.taskipy.tasks]
lint-black = "black --check beancount_n26/ tests/"
lint-flake8 = "flake8 beancount_n26/ tests/"
lint = "task lint-black && task lint-flake8"

test = "pytest tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
