[tool.poetry]
name = "beancount-n26"
version = "1.3.0"
description = "Beancount Importer for N26 CSV exports"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/siddhantgoel/beancount-n26"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.poetry.dependencies]
python = "^3.9"
beancount = ">=2.3.5"
beangulp = ">=0.1.1,<0.3.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
black = ">=24.4.2,<26.0.0"
pytest = "^8.2.2"
ruff = ">=0.5.7,<0.12.0"

[tool.taskipy.tasks]
lint = "ruff check beancount_n26/ tests/"
test = "pytest tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
